_sass/feed.scss
/* 3. Special Template Styles
/* ---------------------------------------------------------- */

@media (min-width: 900px) {
    .home-template .grid-view,
    .tag-template .grid-view,
    .author-template .grid-view {
        margin-top: -70px;
        padding-top: 0;
    }
    .home-template .site-nav {
        position: relative;
        top: -70px;
    }
}



/* 6. Post Feed
/* ---------------------------------------------------------- */

.grid-view {
    position: relative;
    display: flex;
    flex-wrap: wrap;
    margin: 0 -20px;
    padding: 40px 0 0 0;
}

.post-card {
    flex: 1 1 300px;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    margin: 0 20px 40px;
    min-height: 300px;
    background: #fff center center;
    background-size: cover;
    border-radius: 5px;
    box-shadow: rgba(39,44,49,0.06) 8px 14px 38px, rgba(39, 44, 49, 0.03) 1px 3px 8px;
    transition: all 0.5s ease;
}

.post-card:hover {
    box-shadow: 0 0 1px rgba(39,44,49,0.10), 0 3px 16px rgba(39, 44, 49,0.07);
    transition: all 0.3s ease;
    transform: translate3D(0, -1px, 0);
}

.post-card-image-link {
    position: relative;
    display: block;
    overflow: hidden;
    border-radius: 5px 5px 0 0;
}

.post-card-image {
    width: auto;
    height: 200px;
    background: $mine-shaft no-repeat center center;
    background-size: cover;
    background-position: center;
}

.post-card-content-link {
    position: relative;
    display: block;
    padding: 25px 25px 0;
    color: $tundora;
    text-decoration: none;
}

.post-card-content-link:hover {
    text-decoration: none;
    color: $tundora;
}

.post-card-tags {
    display: block;
    margin-bottom: 4px;
    color: $gray;
    font-size: 0.65rem;
    line-height: 1.15em;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

.post-card-title {
    margin-top: 0;
}

.post-card-content {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.post-card-meta {
    padding: 0 25px 25px;
}

.author-profile-image {
    margin-right: 5px;
    width: 25px;
    height: 25px;
    border-radius: 100%;

    object-fit: cover;
}

.post-card-author {
    font-size: 1.3rem;
    font-weight: 500;
    letter-spacing: 0.5px;
    text-transform: uppercase;
}

/* Special Styling for home page grid (below):

The first (most recent) post in the list is styled to be bigger than the others and take over the full width of the grid to give it more emphasis. Wrapped in a media query to make sure this only happens on large viewports / desktop-ish devices.

 */

@media (min-width: 795px) {
    .grid-view {

      .post-card:nth-child(5n+1):not(.no-image) {
        flex: 1 1 100%;
        flex-direction: row;
        height: 100%; //430px;

        .post-card-image-link {
          position: relative;
          flex: 1 1 auto;
          border-radius: 5px 0 0 5px;

          .post-card-image {
            position: absolute;
            width: 100%;
            height: 100%;
          }
        }

        .post-card-content {
          flex: 0 1 357px;

          .post-card-content-link {
            padding: 30px 40px 0;
          }

          .post-card-meta {
            padding: 0 40px 30px;
          }
        }
      }
    }
}

.home-template .site-header:after {
    display: none;
}


/* Adjust some margins for smaller screens */
@media (max-width: 650px) {
    .grid-view {
        padding-top: 5vw;
    }
    .post-card {
        margin: 0 20px 5vw;
    }
}


/* 2. Layout - Page building blocks
/* ---------------------------------------------------------- */

.site-wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

.site-main {
    z-index: 100;
    flex-grow: 1;
}

/* Full width page blocks */
.outer {
    position: relative;
    padding: 0 4vw;
}

/* Centered content container blocks */
.inner {
    margin: 0 auto;
    max-width: 1040px;
    width: 100%;
}


.post-card-excerpt {
    font-size: 15px;
}

.toggle-grid {
    text-align: right;
    margin-bottom: 25px;
    margin-top: -81px;
    @media (max-width: $small-screen-breakpoint) {
        display: none !important;
    }
    .active {
        background-color: $picton-blue !important;
        -webkit-box-shadow: unset;
        -moz-box-shadow:    unset;
        box-shadow:         unset;
        color: $white;
        cursor: default;
    }
    &:not(.active) {
        cursor: pointer;
    }

    .icon-grid {
        position: relative;
        top: 6px;
    }
}

.list-view {
    display: none;
    @media (max-width: $small-screen-breakpoint) {
        display: block !important;
    }
}
.grid-view {
    margin-top: -75px;
    margin-top: -40px;
    @media (max-width: $small-screen-breakpoint) {
        display: none !important;
    }
}

